spacing fix

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -28,7 +28,7 @@
 
     &__photo {
         margin-left: auto;
-        margin-right: spacer(s);
+        margin-right: spacer(small-l);
         margin-top: 4px;
 
 
